syntax = "proto3";

package proto;

option go_package = "Chotot-Microservice/cmd/pb";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string phone = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string phone = 1;
  string username = 2;
  string password = 3;
  string address = 4;
  string email = 5;
  bool is_admin = 6;
}

message RegisterResponse {
  string phone = 1;
  string username = 2;
  string password = 3;
  string token = 4;
}